// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Presence > LatestValueManager > batching > batches signals from multiple workspaces > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1010,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > batches signals from multiple workspaces > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1010,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace2": {
        "note": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "message": ""
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > batches signals from multiple workspaces > submitted signal 3`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1060,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace2": {
        "note": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1060,
            "value": {
              "message": "final message"
            }
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1050,
            "value": {
              "num": 34
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > batches signals sent within the allowableUpdateLatency > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1010,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > batches signals sent within the allowableUpdateLatency > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1100,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1100,
            "value": {
              "num": 34
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > batches signals sent within the allowableUpdateLatency > submitted signal 3`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1220,
    "avgLatency": 5,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 5,
            "timestamp": 1220,
            "value": {
              "num": 90
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > batches signals with different allowed latencies > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1010,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        },
        "note": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "message": ""
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > batches signals with different allowed latencies > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1060,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "note": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1060,
            "value": {
              "message": "final message"
            }
          }
        },
        "count": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1050,
            "value": {
              "num": 34
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > notification signals are sent immediately > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1050,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "n:name:testNotificationWorkspace": {
        "testEvents": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 0,
            "value": {
              "name": "newId",
              "args": [
                77
              ]
            },
            "ignoreUnmonitored": true
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > notification signals are sent immediately > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1060,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "n:name:testNotificationWorkspace": {
        "testEvents": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 0,
            "value": {
              "name": "newId",
              "args": [
                99
              ]
            },
            "ignoreUnmonitored": true
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > notification signals cause queued messages to be sent immediately > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1010,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > notification signals cause queued messages to be sent immediately > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1020,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 1,
            "timestamp": 1020,
            "value": {
              "num": 12
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > queued signal is sent immediately with immediate update message > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1010,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        },
        "immediateUpdate": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > queued signal is sent immediately with immediate update message > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1100,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1100,
            "value": {
              "num": 34
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > sends signal immediately when allowable latency is 0 > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1010,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > LatestValueManager > batching > sends signal immediately when allowable latency is 0 > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1020,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 1,
            "timestamp": 1020,
            "value": {
              "num": 42
            }
          }
        }
      }
    }
  }
]"
`;
